Trimmed and updated

--- a/Evaluation/evaluation.tex
+++ b/Evaluation/evaluation.tex
@@ -8,12 +8,16 @@ Below is a list of all my general and specific objectives that I set myself in t
 
 This objective has been met.
 
+From the bar chart in section \ref{fig:AestheticsGraph} on page \pageref{fig:AestheticsGraph}, which gives a bar chart analysis of all of the questionnaire responses to asking about the aesthetics and ease of navigating the program. you can see that 60\% of the questionnaires that were filled in responded that they strongly agree that the program is aesthetically pleasing and easy to navigate, with a further 40\% agreeing. Making a total of 100\% positive feedback in response to the question posed. Therefore I believe that my program is aesthetically pleasing and easy to navigate.
+
 
 
 
 \subsection{Videos organised and filtering capabilities.}
 
-This objective has been partially met. The video links (tricks tutorial link) are organised in the tricks table in the order of TrickID; however there are no fitering capabilities implemented in the program at this stage. 
+This objective has been partially met. 
+
+The video links (tricks tutorial link) are organised in the tricks table in the order of TrickID; however there are no fitering capabilities implemented in the program at this stage. 
 
 
 \begin{figure}[H]
@@ -28,7 +32,9 @@ The figue above shows that the video links have been organised by TrickID. With 
 
 \subsection{Correct and accurate mapping to the skate parks/spots.}
 
-This objective has not been met.
+This objective has been met.
+
+I am using the most recent Google maps image available and therefore the roads in between skate parks and spots are up to date.
 
 
 
@@ -36,11 +42,15 @@ This objective has not been met.
 
 This objective has not been met.
 
+Currently my program has no functionality which allows the user to plot a route which gives step by step instructions.
+
 
 
 \subsection{Non-biased reviews.}
 
-This objective has been met to an extent. As the program is currently a single user application, the only reviews that will be in place will be the reviews that my client adds. Therefore the only way the review would be biased is if my client specifically made a biased review. 
+This objective has been met to an extent. 
+
+As the program is currently a single user application, the only reviews that will be in place will be the reviews that my client adds. Therefore the only way the review would be biased is if my client specifically made a biased review. 
 
 
 
@@ -48,16 +58,35 @@ This objective has been met to an extent. As the program is currently a single u
 
 This objective has been met.
 
+My bar chart in subsection \ref{fig:TricksTableGraph} on page \pageref{fig:TricksTableGraph} shows that 80\% of the feedback that I received on my questionnaire agreed with the fact that it was easy to read, with a further 20\% of feedback strongly agreeing which leaves a 100\% turn over of positive feedback.
+
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/TricksTableNFS.pdf}
+    \caption{Tricks Table with a List of Tricks in} \label{fig:TricksTableEX}
+\end{figure}
+
+The figure above shows my table with my list of tricks in.
+
+
+
+
+
+
 
 \subsection{ Easy to filter through tricks known.}
 
-This objective has not been met. As discussed before, filtering capabilities have not been implemented in this version of the program.
+This objective has not been met. 
+
+As discussed before, filtering capabilities have not been implemented in this version of the program.
 
 
 
 \subsection {Display status bar messages at appropriate times to inform the user of changes *NEW*} %FEEDBACK
 
 This objective has been met.
+
+I have decided this as 100\% of my questionnaires that I received back strongly agree with the statement. This is shown by my questionnaire section (\ref{QSub}) of my evaluation on page \pageref{QSub}.
 
 
 
@@ -99,6 +128,8 @@ This objective has been met.
 
 This objective hasn't been met.
 
+As discussed before, filtering capabilities have not been implemented in this version of the program.
+
 
 
 
@@ -111,21 +142,39 @@ This objective has been met. I have used a regular expression to validate an off
 
 \subsection {Ensure that videos are displayed at the correct size/resolution that the monitor of the computer is.}
 
-This objective hasn't been met.
+This objective has been met.
+
+As the videos are viewed in the computers default web browser, the videos will be shown in the correct size/resolution that the monitor is.
 
 
 
 \subsection {Ensure the database can add, edit and remove trick data (Name, description, image, completed status and tutorial link).}
 
-This objective hasn't been met. However part of the objective has.
+This objective has been met.
+
+The program is able to graphically add and delete trick data and within the command line interface, the trick data can be edited. This is proven by the testing section of my coursework (Table \ref{TestingResultsTable} on page \pageref{TestingResultsTable})
 
 \subsection {Ensure that the database is displayed correctly inside the application at all resolutions.}
 
 This objective has been met.
 
+I have used a QTableView object within my graphical user interface which has allowed the database to stay in the layout. The program is also displayed at the resolution of the monitor that is is run on and therefore is displayed at the appropriate resolution.
+
 \subsection {Ensure that the tricks are marked by how hard they are by a three way scale of: Easy, Medium or Hard.}
 
 This objective has been met.
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/TricksTableNFS.pdf}
+    \caption{Tricks Marked With a Difficulty} \label{fig:TricksTableDiff}
+\end{figure}
+
+In the figure above, the table shows that each individual trick has a trick difficulty. The trick difficulty is a number which corresponds to the three way scale.
+
+\begin{itemize}
+\item $1 = Easy$
+\item $2 = Medium$
+\item $3 = Hard$
 
 \subsection {Ensure a checkbox is by the side of a trick to represent whether the user has completed that trick or not.}
 
@@ -174,6 +223,16 @@ This objective has been met.
 
 \section{Effectiveness}
 
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/TricksTableNFS.pdf}
+    \caption{Tricks Table Not Full Screen} \label{fig:TricksTableNFS}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/TricksTableFS.pdf}
+    \caption{Tricks Table Full Screen} \label{fig:TricksTableFS}
+\end{figure} %FS
+
 %include as many subsections as necessary for your objectives - Only evaluate the objectives you met
 \subsection{Objective Evaluation}
 
@@ -183,11 +242,11 @@ This objective has been met.
 
 \section{Maintainability}
 
-\section{Suggestions for Improvement}
+\section{Suggestions for Improvement} %ALL OF YOUR OBJECTIVES YOU DIDN'T MEET
 
 \section{End User Evidence}
 
-\subsection{Questionnaires}
+\subsection{Questionnaires} \label{QSub}
 
 \subsubsection{Client Feedback Questionnaire} %TRIM PDF
 
@@ -242,5 +301,16 @@ This objective has been met.
 
 
 \subsection{Graphs}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/AestheticsGraph.pdf}
+    \caption{Bar Chart for Aesthetics and Navigation Opinions.} \label{fig:AestheticsGraph}
+\end{figure}
+
+\begin{figure}[H]
+    \includegraphics[width=\textwidth]{./Evaluation/images/TricksTableGraph.pdf}
+    \caption{Bar Chart for Tricks Table Format} \label{fig:TricksTableGraph}
+\end{figure}
+
 
 \subsection{Written Statements}
